@@ -63,6 +63,8 @@ http_response_handler_direct_response(const struct http_response_handler *handle
 {
     assert(handler != NULL);
     assert(handler->response != NULL);
+    assert(http_status_is_valid(status));
+    assert(!http_status_is_empty(status) || body == NULL);
 
     handler->response(status, headers, body, ctx);
 }
@@ -87,6 +89,7 @@ http_response_handler_invoke_response(struct http_response_handler_ref *ref,
     assert(ref != NULL);
     assert(ref->handler != NULL);
     assert(ref->handler->response != NULL);
+    assert(http_status_is_valid(status));
     assert(!http_status_is_empty(status) || body == NULL);
 
     handler = ref->handler;
