@@ -12,6 +12,8 @@ cm4all-beng-proxy (0.6.24) unstable; urgency=low
   * istream: direct() returns -3 if stream has been closed
   * hstock: don't destroy stocks while items are being created
   * tcp-stock: limit number of connections per host to 256
+  * translate, http-client, ajp-client, cgi, http-cache: verify the HTTP
+    response status
   * allow 8192 connections by default
   * allow 65536 file handles by default
 
